Safari365 Prod/src/objects/PBK__c.object
<CustomObject>
    <fields>
        <fullName>AGENT_SUPPLIER__c</fullName>
        <label>AGENT SUPPLIER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACTNAME__c</fullName>
        <label>CONTACTNAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACTTYPE__c</fullName>
        <label>CONTACTTYPE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Lookup</label>
        <referenceTo>CRM__c</referenceTo>
        <relationshipName>PBKs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTT_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTT</label>
        <referenceTo>CTT__c</referenceTo>
        <relationshipName>PBKs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <label>EMAIL</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAX__c</fullName>
        <label>FAX</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOBILE__c</fullName>
        <label>MOBILE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPTID__c</fullName>
        <label>OPTID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPTLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPT</label>
        <referenceTo>Opt__c</referenceTo>
        <relationshipName>PBKs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBKID__c</fullName>
        <externalId>true</externalId>
        <label>PBKID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHONE__c</fullName>
        <label>PHONE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PXNID__c</fullName>
        <label>PXNID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE__c</fullName>
        <label>SOURCE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEB__c</fullName>
        <label>WEB</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Supplier Contact Detail (PBK)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CONTACTTYPE__c</columns>
        <columns>CRM_Lookup__c</columns>
        <columns>CONTACTNAME__c</columns>
        <columns>AGENT_SUPPLIER__c</columns>
        <columns>PBKID__c</columns>
        <columns>OPTID__c</columns>
        <columns>MOBILE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBK-{00000000}</displayFormat>
        <label>PBK Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Contact Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>